updates to GBD section and incidence

--- a/Treatments_and_adherence.ipynb
+++ b/Treatments_and_adherence.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1b9ce916-e814-4d34-85d1-277f90393fb8",
+   "metadata": {},
+   "source": [
+    "## Treatments and Adherence "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "57476dd4-b175-4daa-a99b-a792bfef7b59",
    "metadata": {},
    "outputs": [],
@@ -21,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "79a2133a-c131-4764-af0d-1744d778447b",
    "metadata": {},
    "outputs": [
@@ -207,7 +215,7 @@
        "7         1809       3      165  max.adherence         65       85  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "522137b9-c660-4c65-ae0f-1e7ef0f5954a",
    "metadata": {},
    "outputs": [
@@ -467,7 +475,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "000bf2de-b2e6-4572-b385-4f1e7c26d5aa",
    "metadata": {},
    "outputs": [
@@ -594,7 +602,7 @@
        "[14 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
