changes to incidence

--- a/Treatments_and_adherence.ipynb
+++ b/Treatments_and_adherence.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "57476dd4-b175-4daa-a99b-a792bfef7b59",
    "metadata": {},
    "outputs": [],
@@ -483,6 +483,30 @@
    "source": [
     "sbp_eff = pd.read_csv('/share/scratch/projects/cvd_gbd/cvd_re/simulation_science/drug_efficacy_sbp.csv')\n",
     "sbp_eff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "bda43c4c-bb5c-4348-9fcd-93343e5ebe35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sbp_eff_data={'sbp':[180,170,160,150,140,130,120],'one_drug_half_dose_efficacy':[9.0,8.3,7.5,6.7,5.9,5.1,4.4],'one_drug_std_dose_efficacy':[11.7,10.7,9.7,8.7,7.7,6.7,5.7],'two_drug_half_dose_efficacy':[18.0,16.4,14.5,13.3,11.7,10.2,8.6],'two_drug_std_dose_efficacy':[22.2,20.3,18.4,16.5,14.6,12.7,10.8],'three_drug_half_dose_efficacy':[26.9,24.6,22.2,19.9,17.6,15.2,12.9],'three_drug_std_dose_efficacy':[31.7,29.0,26.3,23.6,20.9,18.2,15.5]}\n",
+    "sbp_eff_new=pd.DataFrame(sbp_eff_data)\n",
+    "sbp_eff_new.to_csv('/share/scratch/projects/cvd_gbd/cvd_re/simulation_science/drug_efficacy_sbp_new.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4626bb08-2c1f-4dae-bb35-685cace322ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ldl_eff_data={'medication_category':['low_intensity','medium_intensity','high_intensity','low_med_with_non_statin','high_with_non_statin'],'efficacy':[24.67,37.7,51.5,45.0,55.67]}\n",
+    "ldl_eff=pd.DataFrame(ldl_eff_data)\n",
+    "ldl_eff.to_csv('/share/scratch/projects/cvd_gbd/cvd_re/simulation_science/drug_efficacy_ldl.csv')"
    ]
   },
   {
