--- a/Treatments_and_adherence.ipynb
+++ b/Treatments_and_adherence.ipynb
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 79,
    "id": "bda43c4c-bb5c-4348-9fcd-93343e5ebe35",
    "metadata": {},
    "outputs": [],
@@ -734,7 +734,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 80,
+   "id": "faa52f2e-fbe6-4b90-bd6c-d81d231c93ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sbp</th>\n",
+       "      <th>one_drug_half_dose_efficacy</th>\n",
+       "      <th>one_drug_std_dose_efficacy</th>\n",
+       "      <th>two_drug_half_dose_efficacy</th>\n",
+       "      <th>two_drug_std_dose_efficacy</th>\n",
+       "      <th>three_drug_half_dose_efficacy</th>\n",
+       "      <th>three_drug_std_dose_efficacy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>180</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>11.7</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>22.2</td>\n",
+       "      <td>26.9</td>\n",
+       "      <td>31.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>170</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>10.7</td>\n",
+       "      <td>16.4</td>\n",
+       "      <td>20.3</td>\n",
+       "      <td>24.6</td>\n",
+       "      <td>29.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>160</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>9.7</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>18.4</td>\n",
+       "      <td>22.2</td>\n",
+       "      <td>26.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>150</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>19.9</td>\n",
+       "      <td>23.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>140</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>11.7</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>17.6</td>\n",
+       "      <td>20.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>130</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>10.2</td>\n",
+       "      <td>12.7</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>18.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>120</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>10.8</td>\n",
+       "      <td>12.9</td>\n",
+       "      <td>15.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sbp  one_drug_half_dose_efficacy  one_drug_std_dose_efficacy  \\\n",
+       "0  180                          9.0                        11.7   \n",
+       "1  170                          8.3                        10.7   \n",
+       "2  160                          7.5                         9.7   \n",
+       "3  150                          6.7                         8.7   \n",
+       "4  140                          5.9                         7.7   \n",
+       "5  130                          5.1                         6.7   \n",
+       "6  120                          4.4                         5.7   \n",
+       "\n",
+       "   two_drug_half_dose_efficacy  two_drug_std_dose_efficacy  \\\n",
+       "0                         18.0                        22.2   \n",
+       "1                         16.4                        20.3   \n",
+       "2                         14.5                        18.4   \n",
+       "3                         13.3                        16.5   \n",
+       "4                         11.7                        14.6   \n",
+       "5                         10.2                        12.7   \n",
+       "6                          8.6                        10.8   \n",
+       "\n",
+       "   three_drug_half_dose_efficacy  three_drug_std_dose_efficacy  \n",
+       "0                           26.9                          31.7  \n",
+       "1                           24.6                          29.0  \n",
+       "2                           22.2                          26.3  \n",
+       "3                           19.9                          23.6  \n",
+       "4                           17.6                          20.9  \n",
+       "5                           15.2                          18.2  \n",
+       "6                           12.9                          15.5  "
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sbp_eff_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfc38760-0e5e-4652-8d1a-f2791d4b0e79",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "id": "4626bb08-2c1f-4dae-bb35-685cace322ae",
    "metadata": {},
    "outputs": [],
@@ -742,6 +899,85 @@
     "ldl_eff_data={'medication_category':['low_intensity','medium_intensity','high_intensity','low_med_with_non_statin','high_with_non_statin'],'efficacy':[24.67,37.7,51.5,45.0,55.67]}\n",
     "ldl_eff=pd.DataFrame(ldl_eff_data)\n",
     "ldl_eff.to_csv('/share/scratch/projects/cvd_gbd/cvd_re/simulation_science/drug_efficacy_ldl.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "406540d2-a59a-4a75-b6ad-aad3a8e4be07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>medication_category</th>\n",
+       "      <th>efficacy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>low_intensity</td>\n",
+       "      <td>24.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>medium_intensity</td>\n",
+       "      <td>37.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>high_intensity</td>\n",
+       "      <td>51.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>low_med_with_non_statin</td>\n",
+       "      <td>45.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>high_with_non_statin</td>\n",
+       "      <td>55.67</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       medication_category  efficacy\n",
+       "0            low_intensity     24.67\n",
+       "1         medium_intensity     37.70\n",
+       "2           high_intensity     51.50\n",
+       "3  low_med_with_non_statin     45.00\n",
+       "4     high_with_non_statin     55.67"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ldl_eff"
    ]
   },
   {
@@ -870,6 +1106,163 @@
     "sbp_base = pd.read_csv('/share/scratch/projects/cvd_gbd/cvd_re/simulation_science/tx_percent_initialize.csv')\n",
     "sbp_base.head(15)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "ca05f9ed-9a03-484d-9a05-4d1795bae12b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>drug_class</th>\n",
+       "      <th>raw_percent</th>\n",
+       "      <th>scaled_percent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>mono</td>\n",
+       "      <td>ace</td>\n",
+       "      <td>0.280</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>mono</td>\n",
+       "      <td>bblocker</td>\n",
+       "      <td>0.214</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>mono</td>\n",
+       "      <td>diuretic</td>\n",
+       "      <td>0.205</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>mono</td>\n",
+       "      <td>ccb</td>\n",
+       "      <td>0.168</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>combo</td>\n",
+       "      <td>bblocker_ccb</td>\n",
+       "      <td>0.062</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>combo</td>\n",
+       "      <td>bblocker_arb</td>\n",
+       "      <td>0.031</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>combo</td>\n",
+       "      <td>arb_ccb</td>\n",
+       "      <td>0.008</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>combo</td>\n",
+       "      <td>ace_arb</td>\n",
+       "      <td>0.006</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     type    drug_class  raw_percent  scaled_percent\n",
+       "0    mono           ace        0.280             NaN\n",
+       "1    mono      bblocker        0.214             NaN\n",
+       "2    mono      diuretic        0.205             NaN\n",
+       "3    mono           ccb        0.168             NaN\n",
+       "..    ...           ...          ...             ...\n",
+       "12  combo  bblocker_ccb        0.062             NaN\n",
+       "13  combo  bblocker_arb        0.031             NaN\n",
+       "14  combo       arb_ccb        0.008             NaN\n",
+       "15  combo       ace_arb        0.006             NaN\n",
+       "\n",
+       "[16 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "init_sbp = pd.read_excel('/share/scratch/projects/cvd_gbd/cvd_re/simulation_science/initial_percents_egan.xlsx')\n",
+    "init_sbp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "87bfe2c3-56a2-4c04-8b72-1c3e474487b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'HealthcareEntity' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [88]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m outpatient_visits\u001b[38;5;241m=\u001b[39m\u001b[43mHealthcareEntity\u001b[49m (name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124moutpatient_visits\u001b[39m\u001b[38;5;124m'\u001b[39m, kind\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhealthcare_entity\u001b[39m\u001b[38;5;124m'\u001b[39m, gbd_id\u001b[38;5;241m=\u001b[39mme_id(\u001b[38;5;241m19797\u001b[39m), utilization\u001b[38;5;241m=\u001b[39mme_id(\u001b[38;5;241m19797\u001b[39m),)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'HealthcareEntity' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "outpatient_visits = HealthcareEntity(name='outpatient_visits', kind='healthcare_entity', gbd_id=me_id(19797), utilization=me_id(19797),)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e2dde27-f48c-448b-94a4-4260f566aab9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
