--- a/Treatments_and_adherence.ipynb
+++ b/Treatments_and_adherence.ipynb
@@ -722,19 +722,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "id": "bda43c4c-bb5c-4348-9fcd-93343e5ebe35",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sbp_eff_data={'sbp':[180,170,160,150,140,130,120],'one_drug_half_dose_efficacy':[9.0,8.3,7.5,6.7,5.9,5.1,4.4],'one_drug_std_dose_efficacy':[11.7,10.7,9.7,8.7,7.7,6.7,5.7],'two_drug_half_dose_efficacy':[18.0,16.4,14.5,13.3,11.7,10.2,8.6],'two_drug_std_dose_efficacy':[22.2,20.3,18.4,16.5,14.6,12.7,10.8],'three_drug_half_dose_efficacy':[26.9,24.6,22.2,19.9,17.6,15.2,12.9],'three_drug_std_dose_efficacy':[31.7,29.0,26.3,23.6,20.9,18.2,15.5]}\n",
+    "sbp_eff_data={'sbp':['175+','175-165','165-155','155-145','145-135','135-125','<=125'],'one_drug_half_dose_efficacy':[9.0,8.3,7.5,6.7,5.9,5.1,4.4],'one_drug_std_dose_efficacy':[11.7,10.7,9.7,8.7,7.7,6.7,5.7],'two_drug_half_dose_efficacy':[18.0,16.4,14.5,13.3,11.7,10.2,8.6],'two_drug_std_dose_efficacy':[22.2,20.3,18.4,16.5,14.6,12.7,10.8],'three_drug_half_dose_efficacy':[26.9,24.6,22.2,19.9,17.6,15.2,12.9],'three_drug_std_dose_efficacy':[31.7,29.0,26.3,23.6,20.9,18.2,15.5]}\n",
     "sbp_eff_new=pd.DataFrame(sbp_eff_data)\n",
     "sbp_eff_new.to_csv('/share/scratch/projects/cvd_gbd/cvd_re/simulation_science/drug_efficacy_sbp_new.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
    "id": "faa52f2e-fbe6-4b90-bd6c-d81d231c93ae",
    "metadata": {},
    "outputs": [
@@ -771,7 +771,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>180</td>\n",
+       "      <td>175+</td>\n",
        "      <td>9.0</td>\n",
        "      <td>11.7</td>\n",
        "      <td>18.0</td>\n",
@@ -781,7 +781,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>170</td>\n",
+       "      <td>175-165</td>\n",
        "      <td>8.3</td>\n",
        "      <td>10.7</td>\n",
        "      <td>16.4</td>\n",
@@ -791,7 +791,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>160</td>\n",
+       "      <td>165-155</td>\n",
        "      <td>7.5</td>\n",
        "      <td>9.7</td>\n",
        "      <td>14.5</td>\n",
@@ -801,7 +801,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>150</td>\n",
+       "      <td>155-145</td>\n",
        "      <td>6.7</td>\n",
        "      <td>8.7</td>\n",
        "      <td>13.3</td>\n",
@@ -811,7 +811,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>140</td>\n",
+       "      <td>145-135</td>\n",
        "      <td>5.9</td>\n",
        "      <td>7.7</td>\n",
        "      <td>11.7</td>\n",
@@ -821,7 +821,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>130</td>\n",
+       "      <td>135-125</td>\n",
        "      <td>5.1</td>\n",
        "      <td>6.7</td>\n",
        "      <td>10.2</td>\n",
@@ -831,7 +831,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>120</td>\n",
+       "      <td>&lt;=125</td>\n",
        "      <td>4.4</td>\n",
        "      <td>5.7</td>\n",
        "      <td>8.6</td>\n",
@@ -844,14 +844,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   sbp  one_drug_half_dose_efficacy  one_drug_std_dose_efficacy  \\\n",
-       "0  180                          9.0                        11.7   \n",
-       "1  170                          8.3                        10.7   \n",
-       "2  160                          7.5                         9.7   \n",
-       "3  150                          6.7                         8.7   \n",
-       "4  140                          5.9                         7.7   \n",
-       "5  130                          5.1                         6.7   \n",
-       "6  120                          4.4                         5.7   \n",
+       "       sbp  one_drug_half_dose_efficacy  one_drug_std_dose_efficacy  \\\n",
+       "0     175+                          9.0                        11.7   \n",
+       "1  175-165                          8.3                        10.7   \n",
+       "2  165-155                          7.5                         9.7   \n",
+       "3  155-145                          6.7                         8.7   \n",
+       "4  145-135                          5.9                         7.7   \n",
+       "5  135-125                          5.1                         6.7   \n",
+       "6    <=125                          4.4                         5.7   \n",
        "\n",
        "   two_drug_half_dose_efficacy  two_drug_std_dose_efficacy  \\\n",
        "0                         18.0                        22.2   \n",
@@ -872,7 +872,7 @@
        "6                           12.9                          15.5  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,19 +891,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "id": "4626bb08-2c1f-4dae-bb35-685cace322ae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ldl_eff_data={'medication_category':['low_intensity','medium_intensity','high_intensity','low_med_with_non_statin','high_with_non_statin'],'efficacy':[24.67,37.7,51.5,45.0,55.67]}\n",
+    "ldl_eff_data={'medication_category':['low_intensity','medium_intensity','low_med_with_eze','high_intensity','high_with_eze'],'efficacy':[24.67,36.2,46.1,51.25,61.15],'lower_bound':[22.4,33.6,43.5,47.14,57.04],'upper_bound':[27.19,39.1,49.00,55.68,65.58]}\n",
     "ldl_eff=pd.DataFrame(ldl_eff_data)\n",
     "ldl_eff.to_csv('/share/scratch/projects/cvd_gbd/cvd_re/simulation_science/drug_efficacy_ldl.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 10,
    "id": "406540d2-a59a-4a75-b6ad-aad3a8e4be07",
    "metadata": {},
    "outputs": [
@@ -930,6 +930,8 @@
        "      <th></th>\n",
        "      <th>medication_category</th>\n",
        "      <th>efficacy</th>\n",
+       "      <th>lower_bound</th>\n",
+       "      <th>upper_bound</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -937,41 +939,51 @@
        "      <th>0</th>\n",
        "      <td>low_intensity</td>\n",
        "      <td>24.67</td>\n",
+       "      <td>22.40</td>\n",
+       "      <td>27.19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>medium_intensity</td>\n",
-       "      <td>37.70</td>\n",
+       "      <td>36.20</td>\n",
+       "      <td>33.60</td>\n",
+       "      <td>39.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>high_intensity</td>\n",
-       "      <td>51.50</td>\n",
+       "      <td>low_med_with_eze</td>\n",
+       "      <td>46.10</td>\n",
+       "      <td>43.50</td>\n",
+       "      <td>49.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>low_med_with_non_statin</td>\n",
-       "      <td>45.00</td>\n",
+       "      <td>high_intensity</td>\n",
+       "      <td>51.25</td>\n",
+       "      <td>47.14</td>\n",
+       "      <td>55.68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>high_with_non_statin</td>\n",
-       "      <td>55.67</td>\n",
+       "      <td>high_with_eze</td>\n",
+       "      <td>61.15</td>\n",
+       "      <td>57.04</td>\n",
+       "      <td>65.58</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       medication_category  efficacy\n",
-       "0            low_intensity     24.67\n",
-       "1         medium_intensity     37.70\n",
-       "2           high_intensity     51.50\n",
-       "3  low_med_with_non_statin     45.00\n",
-       "4     high_with_non_statin     55.67"
+       "  medication_category  efficacy  lower_bound  upper_bound\n",
+       "0       low_intensity     24.67        22.40        27.19\n",
+       "1    medium_intensity     36.20        33.60        39.10\n",
+       "2    low_med_with_eze     46.10        43.50        49.00\n",
+       "3      high_intensity     51.25        47.14        55.68\n",
+       "4       high_with_eze     61.15        57.04        65.58"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
