model 3 v&v, some other stuff is added in here that were very minor changes or checking on things in other notebooks

--- a/Back_of_envelope.ipynb
+++ b/Back_of_envelope.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "f794bdc7-ee02-404d-bf79-b3f02df65d80",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "f2b8f0f0-6661-4745-be3b-91eea58470c5",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,9 @@
     "#### Known assumptions and limitations: \n",
     "1. I assume that once medicated your exposure decreases to the TMREL. This is not always the case (non-responders, minimal benefit folks) and would lead to an overestimation of the effect \n",
     "2. Assumes that medication is randomly distributed across age/sex/starting SBP level. This is not true, the most in need would be more likely to receive medication which would lead to an underestimation of effect \n",
-    "3. I don't have good data on the percent of folks that are medicated today "
+    "3. I don't have good data on the percent of folks that are medicated today \n",
+    "4. This data is for Alabama only, so total values will be different when varied data for the entire US is used\n",
+    "5. In a true sim, folks might live who would have died and that will affect the population"
    ]
   },
   {
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "66d76ee0-2aaf-4aa1-9e73-6d454f2641aa",
    "metadata": {},
    "outputs": [
@@ -127,7 +129,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_569191/1403476964.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_1978723/1403476964.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  master_art_data = master_art_data.append(data)\n"
      ]
     }
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "868727cd-f57e-4e59-b028-2adc28c822b7",
    "metadata": {},
    "outputs": [
@@ -149,7 +151,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_569191/1403476964.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_1978723/1403476964.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  master_art_data = master_art_data.append(data)\n"
      ]
     }
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "246ee7e4-1535-478d-a135-e333dd2a45df",
    "metadata": {},
    "outputs": [
@@ -171,7 +173,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_569191/1403476964.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_1978723/1403476964.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  master_art_data = master_art_data.append(data)\n"
      ]
     }
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "42a08fa5-ff12-49e1-ac84-c8c99c478d75",
    "metadata": {},
    "outputs": [
@@ -350,7 +352,7 @@
        "4    0.000225        0.000119  0.000829  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "84ba06c6-8d83-4d0f-89e2-a1758d68c9f3",
    "metadata": {},
    "outputs": [
@@ -420,14 +422,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "4e76e4ce-a67b-401c-ab63-cc712a639013",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1047254.0147112255"
+       "34908.467157040846"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MI['decrease_MI'] = (MI['MI_inc'] - MI['new_inc']) * (213000000/30)\n",
+    "MI['decrease_MI'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "4790213b-cd91-4bda-884e-c9e68190da89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.020151356778929583"
       ]
      },
      "execution_count": 25,
@@ -436,8 +460,8 @@
     }
    ],
    "source": [
-    "MI['decrease_MI'] = (MI['MI_inc'] - MI['new_inc']) * 213000000\n",
-    "MI['decrease_MI'].sum()"
+    "MI['percent_change'] = (MI['decrease_MI']) / (MI['MI_inc'] * (213000000/30))\n",
+    "MI['percent_change'].mean()"
    ]
   },
   {
@@ -450,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "00d37e8d-ea32-43f7-ab8d-d481b251f51f",
    "metadata": {},
    "outputs": [],
@@ -462,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "36abff97-e192-4896-aba3-39905487f082",
    "metadata": {},
    "outputs": [],
@@ -474,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "982b43df-b033-4706-a942-36b7f6d1b26e",
    "metadata": {},
    "outputs": [
@@ -482,7 +506,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_569191/1403476964.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_1978723/1403476964.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  master_art_data = master_art_data.append(data)\n"
      ]
     }
@@ -495,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "920d6bec-af2a-4312-b2e0-d00b2bf4e34c",
    "metadata": {},
    "outputs": [
@@ -661,7 +685,7 @@
        "4    0.000290    0.000273        0.000137  0.000567  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "5854a7ce-a62e-4770-a9cd-669828cd22ec",
    "metadata": {},
    "outputs": [
@@ -721,25 +745,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4c25c84b-f185-4d80-9a82-5f6163b3e590",
+   "metadata": {},
+   "source": [
+    "#### In Concrete Values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "id": "4d9f99e4-ba9b-421b-b4cf-a82f562fbfa2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "313357.7047760029"
+       "10445.256825866762"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stroke['decrease_stroke'] = (stroke['stroke_inc'] - stroke['new_inc']) * 213000000\n",
+    "stroke['decrease_stroke'] = (stroke['stroke_inc'] - stroke['new_inc']) * (213000000/30)\n",
     "stroke['decrease_stroke'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "50d53fb2-c394-4c78-b1cc-e0d91fce1647",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.01589450074618915"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stroke['percent_change'] = (stroke['decrease_stroke']) / (stroke['stroke_inc'] * (213000000/30))\n",
+    "stroke['percent_change'].mean()"
    ]
   }
  ],
