--- a/outpatient_visits.ipynb
+++ b/outpatient_visits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "72bd710b-a302-4ac6-82a7-fb75e871e567",
    "metadata": {},
    "outputs": [],
@@ -1965,6 +1965,482 @@
     "    func=lambda row: count_values_in_range(row, 0, 1), axis=1)\n",
     "mean_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c57be382-28e5-4832-9003-949cdae7c847",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>modelable_entity_id</th>\n",
+       "      <th>modelable_entity_name</th>\n",
+       "      <th>modelable_entity_description</th>\n",
+       "      <th>model_type_id</th>\n",
+       "      <th>model_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6892</th>\n",
+       "      <td>24694</td>\n",
+       "      <td>Myocardial infarction due to ischemic heart di...</td>\n",
+       "      <td>Running for EMR comparison</td>\n",
+       "      <td>3</td>\n",
+       "      <td>dismod</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      modelable_entity_id                              modelable_entity_name  \\\n",
+       "6892                24694  Myocardial infarction due to ischemic heart di...   \n",
+       "\n",
+       "     modelable_entity_description  model_type_id model_type  \n",
+       "6892  Running for EMR comparison               3     dismod  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = get_ids('modelable_entity', 24694)\n",
+    "test.loc[test['modelable_entity_id']==24694]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0c30f016-a23f-4e1e-aa36-d556287a9350",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_mi = get_draws('modelable_entity_id',\n",
+    "                24694,\n",
+    "                source='epi',\n",
+    "                location_id=523,\n",
+    "                age_group_id=[10,11,12,13,14,15,16,17,18,19,20,30,31,32,33],\n",
+    "                sex_id=[1,2],\n",
+    "                year_id=2019,\n",
+    "                gbd_round_id=6,\n",
+    "                 decomp_step='step4')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e164f7e7-affc-44fa-b7a9-0db29a948d40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age_group_id</th>\n",
+       "      <th>draw_0</th>\n",
+       "      <th>draw_1</th>\n",
+       "      <th>draw_10</th>\n",
+       "      <th>draw_100</th>\n",
+       "      <th>draw_101</th>\n",
+       "      <th>draw_102</th>\n",
+       "      <th>draw_103</th>\n",
+       "      <th>draw_104</th>\n",
+       "      <th>draw_105</th>\n",
+       "      <th>...</th>\n",
+       "      <th>draw_997</th>\n",
+       "      <th>draw_998</th>\n",
+       "      <th>draw_999</th>\n",
+       "      <th>location_id</th>\n",
+       "      <th>measure_id</th>\n",
+       "      <th>sex_id</th>\n",
+       "      <th>year_id</th>\n",
+       "      <th>metric_id</th>\n",
+       "      <th>model_version_id</th>\n",
+       "      <th>modelable_entity_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>12.348000</td>\n",
+       "      <td>11.535000</td>\n",
+       "      <td>11.943000</td>\n",
+       "      <td>11.742000</td>\n",
+       "      <td>12.020000</td>\n",
+       "      <td>12.288000</td>\n",
+       "      <td>12.595000</td>\n",
+       "      <td>11.555000</td>\n",
+       "      <td>11.873000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12.475000</td>\n",
+       "      <td>11.805000</td>\n",
+       "      <td>11.892000</td>\n",
+       "      <td>523</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>3</td>\n",
+       "      <td>478994</td>\n",
+       "      <td>24694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11</td>\n",
+       "      <td>12.203000</td>\n",
+       "      <td>11.410000</td>\n",
+       "      <td>11.955000</td>\n",
+       "      <td>11.928000</td>\n",
+       "      <td>12.015000</td>\n",
+       "      <td>12.305000</td>\n",
+       "      <td>12.693000</td>\n",
+       "      <td>11.420000</td>\n",
+       "      <td>11.838000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12.070000</td>\n",
+       "      <td>11.478000</td>\n",
+       "      <td>11.947000</td>\n",
+       "      <td>523</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>3</td>\n",
+       "      <td>478994</td>\n",
+       "      <td>24694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12</td>\n",
+       "      <td>11.948000</td>\n",
+       "      <td>11.150000</td>\n",
+       "      <td>11.965000</td>\n",
+       "      <td>11.943000</td>\n",
+       "      <td>12.405000</td>\n",
+       "      <td>12.475000</td>\n",
+       "      <td>12.738000</td>\n",
+       "      <td>11.860000</td>\n",
+       "      <td>11.753000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11.510000</td>\n",
+       "      <td>11.593000</td>\n",
+       "      <td>11.603000</td>\n",
+       "      <td>523</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>3</td>\n",
+       "      <td>478994</td>\n",
+       "      <td>24694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13</td>\n",
+       "      <td>11.983000</td>\n",
+       "      <td>11.275000</td>\n",
+       "      <td>12.103000</td>\n",
+       "      <td>11.797000</td>\n",
+       "      <td>12.455000</td>\n",
+       "      <td>12.428000</td>\n",
+       "      <td>12.648000</td>\n",
+       "      <td>12.110000</td>\n",
+       "      <td>11.680000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11.523000</td>\n",
+       "      <td>11.525000</td>\n",
+       "      <td>11.475000</td>\n",
+       "      <td>523</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>3</td>\n",
+       "      <td>478994</td>\n",
+       "      <td>24694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14</td>\n",
+       "      <td>12.308000</td>\n",
+       "      <td>11.785000</td>\n",
+       "      <td>12.367000</td>\n",
+       "      <td>11.493000</td>\n",
+       "      <td>12.165000</td>\n",
+       "      <td>12.162000</td>\n",
+       "      <td>12.423000</td>\n",
+       "      <td>12.170000</td>\n",
+       "      <td>11.620000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12.108000</td>\n",
+       "      <td>11.275000</td>\n",
+       "      <td>11.565000</td>\n",
+       "      <td>523</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>3</td>\n",
+       "      <td>478994</td>\n",
+       "      <td>24694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>295</th>\n",
+       "      <td>20</td>\n",
+       "      <td>0.015951</td>\n",
+       "      <td>0.013678</td>\n",
+       "      <td>0.018598</td>\n",
+       "      <td>0.016968</td>\n",
+       "      <td>0.016562</td>\n",
+       "      <td>0.014176</td>\n",
+       "      <td>0.017264</td>\n",
+       "      <td>0.015560</td>\n",
+       "      <td>0.014631</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.014847</td>\n",
+       "      <td>0.015281</td>\n",
+       "      <td>0.014808</td>\n",
+       "      <td>523</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>3</td>\n",
+       "      <td>478994</td>\n",
+       "      <td>24694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>296</th>\n",
+       "      <td>30</td>\n",
+       "      <td>0.020398</td>\n",
+       "      <td>0.018756</td>\n",
+       "      <td>0.023332</td>\n",
+       "      <td>0.019247</td>\n",
+       "      <td>0.019760</td>\n",
+       "      <td>0.019427</td>\n",
+       "      <td>0.024427</td>\n",
+       "      <td>0.020218</td>\n",
+       "      <td>0.019620</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.020173</td>\n",
+       "      <td>0.020695</td>\n",
+       "      <td>0.020033</td>\n",
+       "      <td>523</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>3</td>\n",
+       "      <td>478994</td>\n",
+       "      <td>24694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>31</td>\n",
+       "      <td>0.025130</td>\n",
+       "      <td>0.026525</td>\n",
+       "      <td>0.027784</td>\n",
+       "      <td>0.020481</td>\n",
+       "      <td>0.023973</td>\n",
+       "      <td>0.028402</td>\n",
+       "      <td>0.032808</td>\n",
+       "      <td>0.025289</td>\n",
+       "      <td>0.027544</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.028305</td>\n",
+       "      <td>0.028754</td>\n",
+       "      <td>0.026465</td>\n",
+       "      <td>523</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>3</td>\n",
+       "      <td>478994</td>\n",
+       "      <td>24694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298</th>\n",
+       "      <td>32</td>\n",
+       "      <td>0.034940</td>\n",
+       "      <td>0.034594</td>\n",
+       "      <td>0.035692</td>\n",
+       "      <td>0.028926</td>\n",
+       "      <td>0.031089</td>\n",
+       "      <td>0.035945</td>\n",
+       "      <td>0.038144</td>\n",
+       "      <td>0.031517</td>\n",
+       "      <td>0.037344</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.034471</td>\n",
+       "      <td>0.034670</td>\n",
+       "      <td>0.033214</td>\n",
+       "      <td>523</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>3</td>\n",
+       "      <td>478994</td>\n",
+       "      <td>24694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>33</td>\n",
+       "      <td>0.049803</td>\n",
+       "      <td>0.042960</td>\n",
+       "      <td>0.047043</td>\n",
+       "      <td>0.044560</td>\n",
+       "      <td>0.041099</td>\n",
+       "      <td>0.042053</td>\n",
+       "      <td>0.040435</td>\n",
+       "      <td>0.038894</td>\n",
+       "      <td>0.049010</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.038671</td>\n",
+       "      <td>0.038442</td>\n",
+       "      <td>0.040282</td>\n",
+       "      <td>523</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>3</td>\n",
+       "      <td>478994</td>\n",
+       "      <td>24694</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>300 rows × 1008 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     age_group_id     draw_0     draw_1    draw_10   draw_100   draw_101  \\\n",
+       "0              10  12.348000  11.535000  11.943000  11.742000  12.020000   \n",
+       "1              11  12.203000  11.410000  11.955000  11.928000  12.015000   \n",
+       "2              12  11.948000  11.150000  11.965000  11.943000  12.405000   \n",
+       "3              13  11.983000  11.275000  12.103000  11.797000  12.455000   \n",
+       "4              14  12.308000  11.785000  12.367000  11.493000  12.165000   \n",
+       "..            ...        ...        ...        ...        ...        ...   \n",
+       "295            20   0.015951   0.013678   0.018598   0.016968   0.016562   \n",
+       "296            30   0.020398   0.018756   0.023332   0.019247   0.019760   \n",
+       "297            31   0.025130   0.026525   0.027784   0.020481   0.023973   \n",
+       "298            32   0.034940   0.034594   0.035692   0.028926   0.031089   \n",
+       "299            33   0.049803   0.042960   0.047043   0.044560   0.041099   \n",
+       "\n",
+       "      draw_102   draw_103   draw_104   draw_105  ...   draw_997   draw_998  \\\n",
+       "0    12.288000  12.595000  11.555000  11.873000  ...  12.475000  11.805000   \n",
+       "1    12.305000  12.693000  11.420000  11.838000  ...  12.070000  11.478000   \n",
+       "2    12.475000  12.738000  11.860000  11.753000  ...  11.510000  11.593000   \n",
+       "3    12.428000  12.648000  12.110000  11.680000  ...  11.523000  11.525000   \n",
+       "4    12.162000  12.423000  12.170000  11.620000  ...  12.108000  11.275000   \n",
+       "..         ...        ...        ...        ...  ...        ...        ...   \n",
+       "295   0.014176   0.017264   0.015560   0.014631  ...   0.014847   0.015281   \n",
+       "296   0.019427   0.024427   0.020218   0.019620  ...   0.020173   0.020695   \n",
+       "297   0.028402   0.032808   0.025289   0.027544  ...   0.028305   0.028754   \n",
+       "298   0.035945   0.038144   0.031517   0.037344  ...   0.034471   0.034670   \n",
+       "299   0.042053   0.040435   0.038894   0.049010  ...   0.038671   0.038442   \n",
+       "\n",
+       "      draw_999  location_id  measure_id  sex_id  year_id  metric_id  \\\n",
+       "0    11.892000          523           7       2     2019          3   \n",
+       "1    11.947000          523           7       2     2019          3   \n",
+       "2    11.603000          523           7       2     2019          3   \n",
+       "3    11.475000          523           7       2     2019          3   \n",
+       "4    11.565000          523           7       2     2019          3   \n",
+       "..         ...          ...         ...     ...      ...        ...   \n",
+       "295   0.014808          523           6       1     2019          3   \n",
+       "296   0.020033          523           6       1     2019          3   \n",
+       "297   0.026465          523           6       1     2019          3   \n",
+       "298   0.033214          523           6       1     2019          3   \n",
+       "299   0.040282          523           6       1     2019          3   \n",
+       "\n",
+       "     model_version_id  modelable_entity_id  \n",
+       "0              478994                24694  \n",
+       "1              478994                24694  \n",
+       "2              478994                24694  \n",
+       "3              478994                24694  \n",
+       "4              478994                24694  \n",
+       "..                ...                  ...  \n",
+       "295            478994                24694  \n",
+       "296            478994                24694  \n",
+       "297            478994                24694  \n",
+       "298            478994                24694  \n",
+       "299            478994                24694  \n",
+       "\n",
+       "[300 rows x 1008 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_mi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b15c410d-f91b-4197-bcc9-f73e5bf69864",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
