Adding preliminary v and v for model 9, bmi

--- a/HF_CSMR.ipynb
+++ b/HF_CSMR.ipynb
@@ -5,7 +5,7 @@
    "id": "38778c70-9517-403e-96ba-a75685ce402b",
    "metadata": {},
    "source": [
-    "## BMI Testing "
+    "## BMI and FPG Testing "
    ]
   },
   {
@@ -22,12 +22,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7caf4b2d-9279-4cd4-bf24-3c5d9c8f6971",
+   "id": "775b6c0c-a435-48fc-8c36-18aca6035b94",
    "metadata": {},
    "source": [
     "get_draws(\n",
     "  gbd_id_type='rei_id',\n",
-    "  gbd_id=370,\n",
+    "  gbd_id=105,\n",
     "  source='exposure',\n",
     "  location_id=523,\n",
     "  sex_id=[1, 2],\n",
