--- a/risk_mediation.ipynb
+++ b/risk_mediation.ipynb
@@ -548,6 +548,111 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aa88100d-7161-4269-b8a4-110f04a64bb6",
+   "metadata": {},
+   "source": [
+    "## The RR for SBP to HF is categorical, we need continuous"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "a32c9b70-859d-44b9-be27-04defa5e4d3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SBP_Group</th>\n",
+       "      <th>RR_original</th>\n",
+       "      <th>Change_in_SBP</th>\n",
+       "      <th>New_RR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>&lt;120</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>120-129</td>\n",
+       "      <td>1.27</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.131408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>130-139</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1.448298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>140+</td>\n",
+       "      <td>1.76</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1.853944</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  SBP_Group RR_original  Change_in_SBP    New_RR\n",
+       "0      <120           1              0  1.000000\n",
+       "1   120-129        1.27              5  1.131408\n",
+       "2   130-139         1.5             15  1.448298\n",
+       "3      140+        1.76             25  1.853944"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SBP_RR = pd.DataFrame(np.array([['<120',1,0],['120-129',1.27,5],['130-139',1.5,15],['140+',1.76,25]]),\n",
+    "                   columns=['SBP_Group', 'RR_original', 'Change_in_SBP'])\n",
+    "SBP_RR['Change_in_SBP'] = pd.to_numeric(SBP_RR['Change_in_SBP'])\n",
+    "cont_RR = 1.025\n",
+    "SBP_RR['New_RR'] = np.power(cont_RR,SBP_RR['Change_in_SBP'])\n",
+    "SBP_RR\n",
+    "\n",
+    "#Population weighted mean for this group \n",
+    "#We have exposure of SBP \n",
+    "#Could get a better mean SBP for each group (improves the change in SBP) \n",
+    "\n",
+    "#Are there any GBD risks that are categorical? How do they do it? \n",
+    "\n",
+    "#120 vs 121+ \n",
+    "#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "065e3dbf-8f28-4323-bd59-a731381e5f5c",
    "metadata": {},
    "source": [
@@ -568,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 77,
    "id": "27788a49-9201-44ad-bef5-afb8c6a7ec6d",
    "metadata": {},
    "outputs": [
@@ -593,88 +698,46 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ihd_bmi_rr</th>\n",
-       "      <th>ihd_fpg_rr</th>\n",
-       "      <th>ihd_sbp_rr</th>\n",
        "      <th>age_start</th>\n",
        "      <th>sex</th>\n",
-       "      <th>fpg_delta</th>\n",
-       "      <th>sbp_delta</th>\n",
-       "      <th>fpg_delta_adj</th>\n",
        "      <th>sbp_delta_adj</th>\n",
-       "      <th>MF_FPG</th>\n",
-       "      <th>MF_SBP_1</th>\n",
+       "      <th>MF_SBP</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.296208</td>\n",
-       "      <td>1.1512</td>\n",
-       "      <td>1.3402</td>\n",
        "      <td>70</td>\n",
        "      <td>Male</td>\n",
-       "      <td>0.907068</td>\n",
-       "      <td>0.815008</td>\n",
-       "      <td>0.181414</td>\n",
        "      <td>1.630016</td>\n",
-       "      <td>0.440576</td>\n",
        "      <td>0.291074</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.291149</td>\n",
-       "      <td>1.1897</td>\n",
-       "      <td>1.2947</td>\n",
        "      <td>75</td>\n",
        "      <td>Male</td>\n",
-       "      <td>0.877080</td>\n",
-       "      <td>0.842433</td>\n",
-       "      <td>0.175416</td>\n",
        "      <td>1.684865</td>\n",
-       "      <td>0.426010</td>\n",
        "      <td>0.300869</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.395200</td>\n",
-       "      <td>1.1485</td>\n",
-       "      <td>1.3821</td>\n",
        "      <td>65</td>\n",
        "      <td>Male</td>\n",
-       "      <td>0.922068</td>\n",
-       "      <td>0.812612</td>\n",
-       "      <td>0.184414</td>\n",
        "      <td>1.625224</td>\n",
-       "      <td>0.447861</td>\n",
        "      <td>0.290219</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.425974</td>\n",
-       "      <td>1.2145</td>\n",
-       "      <td>1.4584</td>\n",
        "      <td>55</td>\n",
        "      <td>Male</td>\n",
-       "      <td>0.875742</td>\n",
-       "      <td>0.776672</td>\n",
-       "      <td>0.175148</td>\n",
        "      <td>1.553343</td>\n",
-       "      <td>0.425360</td>\n",
        "      <td>0.277383</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2.094858</td>\n",
-       "      <td>1.6915</td>\n",
-       "      <td>1.8558</td>\n",
        "      <td>30</td>\n",
        "      <td>Male</td>\n",
-       "      <td>0.687815</td>\n",
-       "      <td>0.722635</td>\n",
-       "      <td>0.137563</td>\n",
        "      <td>1.445270</td>\n",
-       "      <td>0.334081</td>\n",
        "      <td>0.258084</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -682,22 +745,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   ihd_bmi_rr  ihd_fpg_rr  ihd_sbp_rr  age_start   sex  fpg_delta  sbp_delta  \\\n",
-       "0    1.296208      1.1512      1.3402         70  Male   0.907068   0.815008   \n",
-       "1    1.291149      1.1897      1.2947         75  Male   0.877080   0.842433   \n",
-       "2    1.395200      1.1485      1.3821         65  Male   0.922068   0.812612   \n",
-       "3    1.425974      1.2145      1.4584         55  Male   0.875742   0.776672   \n",
-       "4    2.094858      1.6915      1.8558         30  Male   0.687815   0.722635   \n",
-       "\n",
-       "   fpg_delta_adj  sbp_delta_adj    MF_FPG  MF_SBP_1  \n",
-       "0       0.181414       1.630016  0.440576  0.291074  \n",
-       "1       0.175416       1.684865  0.426010  0.300869  \n",
-       "2       0.184414       1.625224  0.447861  0.290219  \n",
-       "3       0.175148       1.553343  0.425360  0.277383  \n",
-       "4       0.137563       1.445270  0.334081  0.258084  "
+       "   age_start   sex  sbp_delta_adj    MF_SBP\n",
+       "0         70  Male       1.630016  0.291074\n",
+       "1         75  Male       1.684865  0.300869\n",
+       "2         65  Male       1.625224  0.290219\n",
+       "3         55  Male       1.553343  0.277383\n",
+       "4         30  Male       1.445270  0.258084"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,13 +762,14 @@
     "bmi_delta['fpg_delta_adj'] = bmi_delta.fpg_delta / 5 #5 BMI unit RRs to a 1 unit FPG RR  \n",
     "bmi_delta['sbp_delta_adj'] = bmi_delta.sbp_delta * 2 #5 unit BMI RR to a 10 unit SBP RR\n",
     "bmi_delta['MF_FPG'] = ((rr_fpg-1)*bmi_delta['fpg_delta_adj']) / (rr_bmi - 1)\n",
-    "bmi_delta['MF_SBP_1'] = ((rr_sbp_1-1)*bmi_delta['sbp_delta_adj']) / (rr_bmi - 1)\n",
+    "bmi_delta['MF_SBP'] = ((rr_sbp_1-1)*bmi_delta['sbp_delta_adj']) / (rr_bmi - 1)\n",
+    "bmi_delta = bmi_delta[['age_start', 'sex', 'sbp_delta_adj','MF_SBP']]\n",
     "bmi_delta.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 79,
    "id": "fd4478aa-8ea3-4a0d-9bfa-79bf3e2019d7",
    "metadata": {},
    "outputs": [],
